# lala1.2

./: .gitignore  GITHUB_PUSH.md  README.md  docker-compose.yml  package.json  setup.ps1  setup.sh
backend/: CMakeLists.txt  VULNERABILITIES_AND_FUZZED_URLS.md  main.cpp
backend-node/: package-lock.json  package.json  server.js
backend-node/config/: db_config.json
backend/config/: db_config.json
backend/db/: connection.cpp  connection.h
backend/fuzz_corpus/cart_payload/: 01_add.json  02_with_qty.json  03_remove.json  04_zero.json  05_large.json  06_negative.json  07_extra.json  08_string_ids.json  09_float_qty.json
backend/fuzz_corpus/cookie_parser/: 01_single.txt  02_two.txt  04_spaces.txt  05_equals.txt  06_semicolon.txt  07_long.txt  08_special.txt  11_no_eq.txt  12_many.txt
backend/fuzz_corpus/json/: sample_login.json  sample_register.json
backend/fuzz_corpus/json_body/: 07_escape.json  08_user_id.json  09_quantity.json  10_items.json
backend/fuzz_corpus/product_search/: crash_trigger
backend/fuzz_corpus/search_term/: 03_space.txt  06_special.txt  10_phrase.txt
backend/fuzz_corpus/url_decode/: 02_percent.txt  04_plus.txt  05_mixed.txt  06_single.txt  09_hex_lower.txt  10_hex_upper.txt
backend/fuzz_targets/: README.md  fuzz_cart_payload.cpp  fuzz_cookie_parser.cpp  fuzz_json_body.cpp  fuzz_json_parser.cpp  fuzz_product_search.cpp  fuzz_query_builder.cpp  fuzz_search_term.cpp  fuzz_url_decode.cpp
backend/lab/: README.md  lab_guard.h
backend/lab/fuzz/: README.md
backend/lab/memory/: README.md
backend/lab/sql/: README.md
backend/lab/telemetry/: lab_telemetry.cpp  lab_telemetry.h
backend/lab/validation_demo/: README.md  validation_demo.cpp  validation_demo.h
backend/lab_services/: tcp_lab_server.cpp  tcp_lab_server.h
backend/lab_targets/: README.md  asan_demo.cpp  boofuzz_tcp_lab.py  double_free.cpp  fixed_buffer_overflow.cpp  format_string_bug.cpp  heap_buffer_overflow.cpp  integer_overflow_to_alloc.cpp  null_deref.cpp  out_of_bounds_read.cpp  stack_buffer_overflow.cpp  stack_read_overflow.cpp  tcp_lab_server.cpp  unsafe_strncpy.cpp  use_after_free.cpp
backend/models/: CartItem.h  Category.h  Order.h  Product.h  User.h
backend/routes/: auth_routes.cpp  auth_routes.h  cart_routes.cpp  cart_routes.h  lab_routes.cpp  lab_routes.h  order_routes.cpp  order_routes.h  product_routes.cpp  product_routes.h
backend/utils/: json_helper.h  response_helper.h
database/: roles.sql  schema.sql  seed.sql
database/migrations/: 001_add_order_shipping.sql
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: api.js
frontend/src/components/: CartItem.css  CartItem.jsx  Footer.css  Footer.jsx  Navbar.css  Navbar.jsx  ProductCard.css  ProductCard.jsx
frontend/src/context/: CartContext.jsx
frontend/src/pages/: Cart.css  Cart.jsx  Checkout.css  Checkout.jsx  Home.css  Home.jsx  Login.jsx  Men.css  Men.jsx  ProductDetails.css  ProductDetails.jsx  Register.css  Register.jsx  Women.css  Women.jsx
scripts/: test-api.js
